<resources>
    <string name="app_name">secondApp</string>
    <string name="texto_creador">Jose Maria Gomez Liñan</string>
    <string name="texto_grado">Programacion Multimedia</string>
    <string name="text_llamada">Llamar</string>
    <string name="text_alarma">Alarma</string>
    <string name="texto_botones_1">Llamar y Alarma</string>
    <string name="texto_botones_2">E-mail y Website</string>
    <string name="texto_botones_3">Dados y Chistes</string>
    <string name="texto_recibir_LLamada">Pulsa para realizar una llamada</string>
    <string name="texto_ppal">Escribe tu nombre.</string>
    <string name="text_nombre">Nombre</string>
    <string name="texto_radio_1">1 Tirada</string>
    <string name="texto_radio_2">2 Tiradas</string>
    <string name="texto_radio_3">3 Tiradas</string>
    <string name="texto_radio_4">4 Tiradas</string>
    <string name="texto_radio_5">5 Tiradas</string>
    <string name="texto_btn_enviar">Enviar</string>
    <string name="texto_calendar">Fecha actual</string>
    <string name="texto_edit_calendar">Que dia es hoy</string>
    <string name="texto_resultado">0</string>
    <string name="description_cubo">cubo dados</string>
    <string name="description_dados">dados</string>
    <string name="description_resultado">carta de la baraja</string>
    <string name="texto_btn_chiste">Escuchar un chiste</string>
    <string name="chiste">¿Cuál es el último animal que subió al arca de Noé? El del-fin.</string>
    <string name="text_btn_volver">Volver</string>
    <string name="description_botones">botones</string>
    <string name="description_imagen">imagen</string>
    <string name="describe">Estamos en pantalla principal, pulse un boton para acceder a su contenido</string>
</resources>